author:
    Dan Plubell
build-type:
    Simple
cabal-version:
    >= 1.10
category:
    -- TODO
    Other

copyright:
    2015 Dan Plubell <danplubell@gmail.com>

description:
    Provides network components for transfer of DICOM objects 

extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md

license-file:
    LICENSE.md

license:
    MIT

maintainer:
    danplubell.com

name:
    dicom-network

synopsis:
    Storage SOP Class -- SCP and SCU
    
stability: experimental

tested-with:
    GHC == 7.8
version:
    0.0.0
library
    build-depends:
          base ==4.*
        , network == 2.6.*
        , bytestring == 0.10.6.*
        , stm == 2.4.*
        , binary == 0.7.4.*
    default-language:
        Haskell2010
    exposed-modules:
        Dicom.StorageSOP.SCP
        Dicom.StorageSOP.SCU
        Dicom.StorageSOP.SCPDispatcher
        Dicom.Network.Associate.Types        
    ghc-options:
        -Wall
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library

executable dicom-network
    build-depends:
        base
      , dicom-network
    default-language:
        Haskell2010
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        executable
    main-is:
        Main.hs

test-suite tests
    build-depends:
           base
         , HUnit
         , QuickCheck
         , hspec == 2.*
    default-language:
        Haskell2010
    ghc-options:
        -fhpc
        -Wall
        -Werror
    hs-source-dirs:
        library
        test-suite
    main-is:
        Spec.hs
    other-modules:
        Dicom.Network.Associate.Types
        AssociateSpec
    type:
        exitcode-stdio-1.0

test-suite style
    build-depends:
        base
      , hlint ==1.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HLint.hs
    type:
        exitcode-stdio-1.0

